<resources>
    <string name="app_name">Checktrip</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="depAirport">DepAirport</string>
    <string name="arrAirport">ArrAirport</string>
    <string name="date">dd/mm/yyyy</string>
    <string name="depInfo">airport name of departure</string>
    <string name="depGate">departure date</string>
    <string name="depTime">Departure Time</string>
    <string name="arrInfo">airport name of arrival</string>
    <string name="arrGate">arrival date</string>
    <string name="arrTime">Arrival Time</string>
    <string name="flightnumber">Flight Number</string>
    <string name="airport">Airport</string>
    <string name="flightdate">dd/mm/yyyy</string>
    <string name="logout">LOGOUT</string>
    <string name="arrow">arrow</string>
    <string name="title_activity_maps">Map</string>
    <string name="departureTime">YYYY-MM-DD hh:mm</string>
    <string name="DepartureAirport">Airport</string>
    <string name="arrivalAirport">Airport</string>
    <string name="arrivalTime">YYYY-MM-DD hh:mm</string>
    <string name="terminal">Terminal</string>
    <string name="gate">gate</string>
    <string name="link">link</string>
    <string name="depDate">YYYY-MM-DD</string>
    <string name="arrDate">YYYY-MM-DD</string>
    <string name="Passenger_name">Traveler\'s Name</string>
    <string name="Passenger">P</string>
    <string name="go_date">YYYY-MM-DD</string>
    <string name="Traver">Traveler</string>
    <string name="title_activity_test11111">test11111</string>
</resources>
