<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="10dp"
    app:elevation="5dp">

    <android.support.v7.widget.CardView
        android:id="@+id/cv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:clickable="true"
        app:cardCornerRadius="10dp"
        app:elevation="5dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/flightnumber"
                android:text="@string/flightnumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:textSize="15dp"
                android:paddingLeft="15dp"
                />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/terminal"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/terminal"
                    android:layout_gravity="right"
                    android:textSize="10dp"
                    android:textColor="@color/colorPrimary"
                    android:paddingLeft="15dp"

                    />

                <TextView
                    android:id="@+id/gate"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/gate"
                    android:textColor="@color/colorPrimary"
                    android:layout_gravity="right"
                    android:textSize="10dp"
                    android:paddingLeft="15dp"

                    />


            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="2dp"
                android:weightSum="1">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="0.14">
                    <TextView
                        android:id="@+id/departureAirport"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/DepartureAirport"
                        android:textSize="30dp"
                        android:paddingLeft="40dp"

                        />
                    <TextView
                        android:id="@+id/departureTime"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/departureTime"
                        android:textSize="10dp"
                        android:paddingLeft="15dp"

                        />

                </LinearLayout>
                <TextView
                    android:id="@+id/to"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="TO"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:textSize="30dp"
                    android:textColor="#FFB90F"
                    android:paddingLeft="40dp"

                    />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="0.7">
                    <TextView
                        android:id="@+id/arrivalAirport"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/arrivalAirport"
                        android:layout_gravity="right"
                        android:textSize="30dp"
                        android:paddingRight="40dp"

                        />
                    <TextView
                        android:id="@+id/arrivalTime"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/arrivalTime"
                        android:layout_gravity="right"
                        android:textSize="10dp"
                        android:paddingRight="15dp"

                        />

                </LinearLayout>




            </LinearLayout>



            <LinearLayout
                android:orientation="horizontal"
                android:layout_below="@+id/news_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp">
                <Button
                    android:id="@+id/btn_share"
                    android:text="SHARE"
                    android:background="#00000000"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <Button
                    android:id="@+id/btn_delete"
                    android:background="#00000000"
                    android:textColor="@color/colorPrimary"
                    android:text="DELETE"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>


        </LinearLayout>


    </android.support.v7.widget.CardView>


</LinearLayout>